# final_unix_project

./: CMakeLists.txt  Makefile  README.md  Subject_Management  client.c  client.h  delete_todo.c  delete_todo.h  main.c  make_directory.c  make_directory.h  make_todo.c  make_todo.h  read_from_txt.c  read_from_txt.h  server.c  server.h  todo_structure.h  upload_subject.c  upload_subject.h  upload_to_txt.c  upload_to_txt.h  view_file.c  view_file.h
